--- a/localrepo/index.html
+++ b/localrepo/index.html
@@ -2,3 +2,4 @@
 <p> I AM SHIVANSH LEARNING GIT AND GITHUB
 </p>
 <h1>PYTHON-DJANGO/ CSS / HTML / MYSQL</h1>
+<h2> local repo of django the python framework</h2>
